syntax = "proto3";

package soccer;

service SoccerService {
  rpc CreateTeam (CreateTeamRequest) returns (NoResponse);
  rpc CreatePlayer (CreatePlayerRequest) returns (NoResponse);
  rpc GetTeam (GetTeamRequest) returns (GetTeamResponse);
  rpc GetPlayer (GetPlayerRequest) returns (GetPlayerResponse);
}

message NoResponse {}

message GetPlayerRequest {
  int32 id = 1;
}

message GetPlayerResponse {
  Player player = 1;
}

message CreateTeamRequest {
  string name = 1;
}

message CreatePlayerRequest {
  int32 team_id = 1;
  string name = 2;
  string position = 3;
  int32 height = 4;
  int32 weight = 5;
}

message GetTeamRequest {
  int32 id = 1;
}

message GetTeamResponse {
  int32 id = 1;
  string name = 2;
  string created_at = 3;
  string updated_at = 4;
  repeated Player players = 5;
}

message Player {
  int32 id = 1;
  int32 team_id = 2;
  string name = 3;
  string position = 4;
  int32 height = 5;
  int32 weight = 6;
  string created_at = 7;
  string updated_at = 8;
}